fix horizontal scroll

--- a/style/about/index.css
+++ b/style/about/index.css
@@ -379,6 +379,10 @@
         grid-template-columns: 1fr;
         gap: 20px 0;
     }
+
+    #vacancies {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 580px) {
